--- a/by.pvt.core/pom.xml
+++ b/by.pvt.core/pom.xml
@@ -22,7 +22,28 @@
         <artifactId>by.pvt.api</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>6.0.0</version>
+    </dependency>
 </dependencies>
+
+    <packaging>war</packaging>
+
+    <build>
+        <finalName>jspServlet</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <webXml>src/main/resources/webapp/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
