--- a/by.pvt.core/src/main/resources/webapp/WEB-INF/web.xml
+++ b/by.pvt.core/src/main/resources/webapp/WEB-INF/web.xml
@@ -17,5 +17,33 @@
         <servlet-name>onlinestore</servlet-name>
         <url-pattern>/store</url-pattern>
     </servlet-mapping>
+<filter>
+    <filter-name>SessionFilter</filter-name>
+    <filter-class>by.pvt.core.multi.filter.SessionFilter</filter-class>
+</filter>
+
+    <filter-mapping>
+        <filter-name>SessionFilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+        <url-pattern>/client/*</url-pattern>
+        <url-pattern>/client.jsp</url-pattern>
+        <url-pattern>/admin.jsp</url-pattern>
+        <url-pattern>/index.jsp</url-pattern>
+        <url-pattern>/cart.jsp</url-pattern>
+
+
+    </filter-mapping>
+
+    <filter>
+        <filter-name>userOrAdmin</filter-name>
+        <filter-class>by.pvt.core.multi.filter.userOrAdminFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>userOrAdmin</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+        <url-pattern>/admin.jsp</url-pattern>
+
+    </filter-mapping>
 
 </web-app>
