--- a/by.pvt.core/pom.xml
+++ b/by.pvt.core/pom.xml
@@ -49,6 +49,11 @@
             <version>6.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
 
     </dependencies>
 
