--- a/by.pvt.core/src/main/resources/webapp/WEB-INF/web.xml
+++ b/by.pvt.core/src/main/resources/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
     <filter>
         <filter-name>userOrAdmin</filter-name>
-        <filter-class>by.pvt.core.multi.filter.userOrAdminFilter</filter-class>
+        <filter-class>by.pvt.core.multi.filter.UserOrAdminFilter</filter-class>
     </filter>
 
     <filter-mapping>
